# pomodoro-timer-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  constants.py  installer.iss  main.py  mypy.ini  pyproject.toml  requirements.txt  settings_dialog.py  storage.py  timer.py  ui.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
docs/superpowers/specs/: 2026-04-09-background-first-daily-use-design.md
src/pomodoro/: completion_policy.py  constants.py  settings_dialog.py  stats.py  storage.py  timer.py  tray.py  ui.py  updater.py
tests/: test_completion_policy.py  test_constants.py  test_stats.py  test_storage.py  test_timer.py  test_updater.py
