[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pomodoro-timer"
version = "1.0.2"
description = "A lightweight desktop Pomodoro Timer for Windows 11"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "winotify>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pomodoro.ui"
ignore_errors = true

[tool.coverage.run]
omit = [
    "src/pomodoro/ui.py",
    "src/pomodoro/tray.py",
    "src/pomodoro/settings_dialog.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
